kubernetes/mongo-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mongodb-deployment
  namespace: chatapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mongodb
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
  template:
    metadata:
      name: mongodb-pod
      labels:
        app: mongodb
    spec:
      containers:
        - name: chatapp-mongodb
          image: mongo:latest
          ports:
            - containerPort: 27017
          volumeMounts:
            - name: mongo-data
              mountPath: /data
      volumes:
        - name: mongo-data
          persistentVolumeClaim:
            claimName: mongodb-pvc
      restartPolicy: Always
