kubernetes/backend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: backend
  namespace: chatapp
spec:
  selector:
    app: backend
  type: ClusterIP
  ports:
  - name: backend-chatapp
    protocol: TCP
    port: 5001
    targetPort: 5001
