kubernetes/frontend-service.yml
apiVersion: v1
kind: Service
metadata:
  name: frontend
  namespace: chatapp
spec:
  selector:
    app: frontend
  type: ClusterIP
  ports:
  - name: frontend-chatapp
    protocol: TCP
    port: 80
    targetPort: 80
